lint, resources cleaning